--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1 style="height: 100vh; display: flex; justify-content: center; align-items: center; color: red; background-color: grey;">hello</h1>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, perspiciatis? Quae odit corrupti maxime aliquid sunt omnis id cumque fuga!</p>
 </body>
 </html>
