--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <h1 style="height: 100vh; display: flex; justify-content: center; align-items: center; color: red; background-color: grey;">hello</h1>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, perspiciatis? Quae odit corrupti maxime aliquid sunt omnis id cumque fuga!</p>
+
+
+    <div style="height: 50vh; background-color: rgb(210, 78, 195); width: 100%;"></div>
 </body>
 </html>
